fix table wrap

--- a/panel/css/kar.css
+++ b/panel/css/kar.css
@@ -1115,7 +1115,7 @@ p.test-case-title {
 /* .test-case-title.modified :first-child:after {
     content: '\00a0 - \00a0 ';
 } */
-.test-case-title :first-child:after {
+.test-case-title span:first-child:after {
     content: '\00a0 - \00a0 ';
 }
 
